alignment fix

--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,16 @@ body {
 #navbar-example2 {
   border-radius: 0 0 25px 25px;
   position: fixed;
-  float: center;
+  margin-left: 470px;
 }
-#icon{
-
+#scrollspyHeading1
+{
+  margin-top: -100px;
 }
 nav.sticky
 {
-  padding: 5px 100px;
+opacity: 0px;
+  padding: 25px 100px;
   background: rgba(0,0,0,0.2);
   
 }
@@ -27,7 +29,7 @@ nav.sticky
 }
 .home_section
 {
-  margin-top: 130px;
+  margin-top: 140px;
   margin-bottom: 1115px;
 }
 
@@ -65,6 +67,7 @@ btn_link
   color: white;
   position: absolute;
   margin-top: 310px;
+  margin-left: -30px;
 }
 .orb1
 {
@@ -79,9 +82,10 @@ btn_link
   width: 1400px;
   height: 800px;
   margin-top: 1200px;
+  margin-left: -20px;
 }
 .project_section {
-  margin-top: 1000px;
+  margin-top: 1080px;
   width: 150px;
   position: static;
   margin-bottom: 500px;
@@ -105,7 +109,7 @@ btn_link
 }
 #carousel {
   margin-bottom: 0px;
-  margin-left: 240px;
+  margin-left: 215px;
   width: 1000px;
   display: inline-block;
   top: -200px;
@@ -158,7 +162,7 @@ btn_link
 }
 #p2 {
   width: 2000px;
-  margin-left: 390px;
+  margin-left: 360px;
   height: 200px;
   top: -300px;
   background-image: url("projectsmall.png");
@@ -166,7 +170,7 @@ btn_link
 }
 #p3 {
   width: 2000px;
-  margin-left: 800px;
+  margin-left: 782px;
   height: 200px;
   top: -516px;
   background-image: url("projectsmall.png");
@@ -196,11 +200,11 @@ btn_link
 }
 
 .tutor_section {
-  margin-top: -700px;
+  margin-top: -500px;
   margin-bottom: 600px;
 }
 #tutorcomment {
-  margin-left: 545px;
+  margin-left: 535px;
   font-size: 16px;
   bottom: 0;
   width: 500px;
@@ -211,14 +215,14 @@ btn_link
   height: 500px;
   margin-bottom: 0;
   position: absolute;
-  margin-left: -150px;
+  margin-left: -180px;
   margin-top: 340px;
 }
 
 .tutormodel {
   width: 630px;
   height: 350px;
-  margin-left: 880px;
+  margin-left: 860px;
   position: absolute;
   margin-top: 440px;
 }
@@ -226,7 +230,7 @@ btn_link
 .dstudent
 {
   position: absolute;
-  margin-left: 460px;
+  margin-left: 420px;
   margin-top: 470px;
   width: 590px;
   height: 300px;
@@ -242,7 +246,7 @@ btn_link
 #projectex {
   font-size: 15px;
   position: absolute;
-  margin-left: 1000px;
+  margin-left: 980px;
   margin-top: 580px;
   width: 120px;
   margin-bottom: 0px;
@@ -253,7 +257,7 @@ btn_link
 #learntex {
   font-size: 15px;
   position: absolute;
-  margin-left: 1270px;
+  margin-left: 1250px;
   margin-top: 580px;
   width: 120px;
   color: rgb(107, 17, 17);
@@ -262,7 +266,7 @@ btn_link
 
 .contact_section {
   margin-top: 1050px;
-  margin-left: 330px;
+  margin-left: 310px;
   width: 850px;
   position: absolute;
   padding-bottom: 100px;
